Fix arrow alignment

--- a/docs/_template/light-dark-theme/styles/master.css
+++ b/docs/_template/light-dark-theme/styles/master.css
@@ -141,3 +141,13 @@ select {
     transition: background-color .3s, color .3s;
     cursor: pointer;
 }
+
+/* arrow */
+
+span.arrow-d{
+    top: 6px; position: relative;
+}
+
+span.arrow-r{
+    top: 6px; position: relative;
+}
